# circleci-tui-rs

./: .env.example  API_INTEGRATION.md  Cargo.toml  FACETED_SEARCH_INTEGRATION.md  FILTER_KEYBOARD_GUIDE.md  FILTER_UI_POLISH.md  FILTER_USAGE.md  FILTER_VISUAL_GUIDE.md  HOW_TO_TEST_FILTERS.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_SUMMARY.md  LOAD_MORE_IMPLEMENTATION_SUMMARY.md  LOAD_MORE_TESTING_GUIDE.md  LOG_STREAMING_IMPROVEMENTS.md  Makefile.toml  PAGINATION_IMPLEMENTATION.md  PHASE8_COMPLETE.md  PHASE8_VERIFICATION.md  PIPELINE_SEARCH_IMPLEMENTATION.md  PIPELINE_SEARCH_TEST_CHECKLIST.md  QUICK_REFERENCE.md  README.md  SEARCH_INPUT_IMPLEMENTATION.md  SSH_MODAL_IMPLEMENTATION.md  SSH_MODAL_VISUAL.md  TESTING_API.md  TEST_LOG_STREAMING.md  TEXT_FILTER_TEST_CHECKLIST.md  TEXT_INPUT_CHANGES_SUMMARY.md  TEXT_INPUT_FILTER_IMPLEMENTATION.md  TEXT_INPUT_UI_LAYOUT.md  UI_IMPROVEMENTS.md  VERIFICATION_CHECKLIST.md  job-266107067-logs.txt  lefthook.yml  test_filters.sh
.claude/: settings.local.json
docs/: PREFERENCES_INTEGRATION.md  STAGE_DATA_ANALYSIS.md
examples/: faceted_search.rs  preferences_demo.rs  test_git.rs
src/: app.rs  config.rs  events.rs  git.rs  lib.rs  main.rs  models.rs  preferences.rs  theme.rs
src/api/: client.rs  error.rs  mod.rs  models.rs
src/cache/: log_cache.rs  mod.rs  prefetch.rs
src/ui/: mod.rs  utils.rs
src/ui/screens/: mod.rs  pipeline_detail.rs  pipelines.rs  workflow.rs
src/ui/widgets/: Untitled-1.json  Untitled-2.json  Untitled-3.json  breadcrumb.rs  confirm_modal.rs  error_modal.rs  faceted_search.rs  help_modal.rs  job_item.rs  line_range_modal.rs  log_modal.rs  log_viewer.rs  mod.rs  pipeline_item.rs  powerline.rs  spinner.rs  ssh_modal.rs  status_badge.rs  status_message.rs  text_input.rs
tests/: README.md  integration_test.rs  workflow_test.rs
