[package]
name = "circleci-tui-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TUI
ratatui = "0.25"
crossterm = "0.27"

# Error handling (needed for Phase 1)
anyhow = "1.0"

# Phase 2+ dependencies (disabled for Phase 1 due to Rust version requirements)
# Async runtime
# tokio = { version = "1", features = ["full"] }
# tokio-stream = "0.1"

# HTTP client
# reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
# serde = { version = "1.0", features = ["derive"] }
# serde_json = "1.0"

# Error handling
# thiserror = "1.0"

# Configuration
# dotenvy = "0.15"

# Utilities
# chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock"] }
# url = "2.3"

# Logging (optional, for debugging)
# tracing = "0.1"
# tracing-subscriber = "0.3"

[dev-dependencies]
mockito = "1.2"
