[package]
name = "circleci-tui-rs"
version = "0.1.0"
edition = "2021"
authors = ["slamer59"]
description = "A fast, keyboard-driven terminal UI for monitoring CircleCI pipelines (PoC)"
repository = "https://github.com/slamer59/circleci-tui-rs"
homepage = "https://github.com/slamer59/circleci-tui-rs"
keywords = ["circleci", "tui", "terminal", "ci-cd", "monitoring"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TUI
ratatui = "0.28"
crossterm = "0.28"

# Error handling (needed for Phase 1)
anyhow = "1.0"

# Phase 2+ dependencies (enabled for Phase 4+)
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# HTTP client
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Configuration
dotenvy = "0.15"
confy = { version = "0.6", default-features = false, features = ["yaml_conf"] }

# Utilities
chrono = { version = "0.4.31", default-features = false, features = ["serde", "clock"] }
url = "2.3"
ansi-to-tui = "8.0"
ratatui-core = "0.1"
git2 = "0.18"
arboard = "3.4"
dirs = "5.0"

# Logging (optional, for debugging)
# tracing = "0.1"
# tracing-subscriber = "0.3"

[[bin]]
name = "circleci-tui"
path = "src/main.rs"

[dev-dependencies]
mockito = "1.2"
